# wzmapeditor

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.ci/: build.sh
.github/workflows/: ci.yml  deploy_release_web.yml  pages.yml  test.yml  web-bundle.yml
crates/quickjs-wz-sys/: Cargo.toml  build.rs
crates/quickjs-wz-sys/src/: lib.rs  wrapper.c
crates/quickjs-wz-sys/tests/: smoke.rs
crates/wz-maplib/: Cargo.toml
crates/wz-maplib/src/io_wz/: archive.rs  campaign.rs  classify.rs  common.rs  directory.rs  level_json.rs  mod.rs
crates/wz-maplib/src/io_wz/script/: host_fns.rs  mod.rs  runtime.rs
crates/wz-maplib/src/validate/: helpers.rs  object_positions.rs
crates/wz-maplib/tests/: script_smoke.rs
crates/wz-pie/src/: parser.rs
crates/wz-stats/src/: database.rs
crates/wzmapeditor/: Cargo.toml  Trunk.toml  index.html
crates/wzmapeditor/assets/: 3c-Gamma.wz
crates/wzmapeditor/data/terrain_overrides/: classic.wz
crates/wzmapeditor/js/: basis_glue.js
crates/wzmapeditor/src/: autosave.rs  config.rs  icon.rs  keybindings.rs  launch_sentinel.rs  main.rs  panic_logger.rs  publish.rs  update_check.rs  web_data.rs  web_map_io.rs
crates/wzmapeditor/src/app/: actions.rs  data_loading.rs  dialogs.rs  dock_viewer.rs  duplicate.rs  map_io.rs  mod.rs  output_log.rs  testing.rs  tileset.rs  types.rs  web_ground.rs  web_ground_cache.rs
crates/wzmapeditor/src/assets/: mod.rs  native.rs  web.rs
crates/wzmapeditor/src/designer/: custom_templates.rs  tabs.rs
crates/wzmapeditor/src/generator/: dialog.rs  nodes.rs  pipeline.rs  placement.rs
crates/wzmapeditor/src/map/: document.rs  history.rs
crates/wzmapeditor/src/startup/: loading_ui.rs  mod.rs  pipeline.rs  splash_ui.rs  task.rs  workers.rs
crates/wzmapeditor/src/thumbnails/: cache.rs  generator.rs  mod.rs  preload.rs  web_cache.rs
crates/wzmapeditor/src/tools/: ground_type_brush.rs  height_brush.rs  line_mode.rs  mirror.rs  mod.rs  object_tools.rs  placement.rs  texture_paint.rs  trait_def.rs  vertex_sculpt.rs
crates/wzmapeditor/src/tools/stamp/: pattern.rs  placement.rs  scatter.rs
crates/wzmapeditor/src/ui/: actions.rs  asset_browser.rs  hierarchy_panel.rs  main_menu.rs  map_browser.rs  minimap.rs  online_maps.rs  property_panel.rs  settings_window.rs  tileset_browser.rs  tool_dispatch.rs  tool_palette.rs  toolbar.rs
crates/wzmapeditor/src/ui/viewport_panel/: ctrl_pick.rs  mod.rs
crates/wzmapeditor/src/ui/viewport_panel/overlays/: balance.rs  debug.rs  heatmap.rs  hitbox.rs  labels.rs  mod.rs  tools.rs
crates/wzmapeditor/src/viewport/: atlas.rs  atlas_gpu.rs  basis.rs  camera.rs  ground_types.rs  mod.rs  particles.rs  picking.rs  render_types.rs  texture_loader.rs  thumbnail.rs
crates/wzmapeditor/src/viewport/model_loader/: background.rs  file_finder.rs  mod.rs  pie_loader.rs  texture_loader.rs
crates/wzmapeditor/src/viewport/renderer/: heatmap_viewshed.rs  mod.rs  model_pass.rs  terrain_pass.rs  util.rs  water_sky.rs
crates/wzmapeditor/src/viewport/shaders/: heatmap.wgsl  model.wgsl  terrain.wgsl  terrain_high.wgsl  terrain_medium.wgsl
crates/wzmapeditor/src/web/: cache.rs  dom.rs  mod.rs
docs/: terrain.md
scripts/: fetch-web-data.sh  requirements.txt  slim-data.py
