[package]
name = "wz-maplib"
description = "Warzone 2100 map format I/O library"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dev-dependencies]
wz-pie = { path = "../wz-pie" }

[dependencies]
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand_mt = { workspace = true }
quickjs-wz-sys = { workspace = true }

[lints]
workspace = true
