[package]
name = "wzmapeditor"
description = "Warzone 2100 map editor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wz-maplib = { path = "../wz-maplib" }
wz-pie = { path = "../wz-pie" }
wz-stats = { path = "../wz-stats" }
eframe = { workspace = true }
egui = { workspace = true }
bytemuck = { workspace = true }
egui_dock = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
rustc-hash = { workspace = true }
semver = { workspace = true }
web-time = { workspace = true }
# `js` gives the seedless global RNG entropy on wasm; no-op on native.
fastrand = { version = "2", features = ["js"] }
noise = "0.9"

# Native-only: these either wrap C/C++ (basis-universal, zstd, mimalloc), use
# blocking sockets (ureq), or shell out to the OS (open) and cannot build or
# run on wasm32-unknown-unknown. rfd stays cross-platform (it has a web backend).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }
ureq = { workspace = true }
open = { workspace = true }
basis-universal = { workspace = true }
basis-universal-sys = { workspace = true }
zstd = { workspace = true }
mimalloc = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlElement",
    "HtmlAnchorElement",
    "Node",
    "Url",
    "FileList",
    "File",
    "Blob",
    "Storage",
    "Navigator",
    "StorageManager",
    "Request",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Cache",
    "CacheStorage",
] }
console_error_panic_hook = "0.1"

[target.aarch64-pc-windows-msvc.dependencies]
# Use mimalloc v2 on arm64 windows builds to avoid a runtime crash caused by mimalloc 3.3.0/3.3.1
# Can be removed once one of these PRs is merged:
# - https://github.com/purpleprotocol/mimalloc_rust/pull/160
# - https://github.com/purpleprotocol/mimalloc_rust/pull/164
mimalloc = { version = "0.1", features = ["v2"] }

[dev-dependencies]
tempfile = "3"
# Used only by `assets::web` tests to assemble in-memory `.wz` fixtures; the
# production VFS reads through `wz-maplib`, so this never enters the wasm build.
zip = { workspace = true }

[lints]
workspace = true

[package.metadata.packager]
product-name = "wzmapeditor"
identifier = "org.wzmapeditor.editor"
category = "Utility"
icons = ["icons/256x256.png"]

[package.metadata.packager.windows]
digest-algorithm = "sha256"

[package.metadata.packager.nsis]
display-language-selector = false
